add thrift dependencies and folder